fix overlap at lower res

--- a/common/common.scss
+++ b/common/common.scss
@@ -2,7 +2,7 @@
   display: none;
 }
 
-@media screen and (min-width: 925px) {
+@media screen and (min-width: 1150px) {
   .custom-topic-banner {
     box-shadow: .125em .5em 2em 0.1em rgb(0 0 0 / 7%);
     width: fit-content;
